test github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
     - name: Environmental inspections 
       run: | 
+        tree
         ls
         docker version
         docker compose version
