--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
     - sharks-king-patch-1
-    paths:
-    - docker-build
+#    paths:
+#    - docker-build
 jobs:
   docker-build:
     name: docker-build
