--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     branches:
     - sharks-king-patch-1
 #    paths:
-#    - docker-build
+#    - docker-build/*
 jobs:
   docker-build:
     name: docker-build
@@ -13,6 +13,7 @@ jobs:
     steps:
     - name: Environmental inspections 
       run: | 
+        pwd
         tree
         ls
         docker version
