--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Env
       run: |
         source ./docker-build/build-config.env
+        env
     - name: docker build
       run: |
        cd docker-build
@@ -40,15 +41,15 @@ jobs:
     - name: Log into registry dockerhub
       uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
       with:
-        #registry: 
+        registry: docker.io
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
     - name: Push into registry dockerhub
       run: | 
-        docker tag sqlynx:latest sharksking/sqlynx:latest
-        docker tag sqlynx:latest sharksking/sqlynx:${SQLYNX_VERSION}
-        docker push sharksking/sqlynx:latest
-        docker push sharksking/sqlynx:${SQLYNX_VERSION}
+        docker tag sqlynx:latest docker.io/library/sharksking/sqlynx:latest
+        docker tag sqlynx:latest docker.io/library/sharksking/sqlynx:${SQLYNX_VERSION}
+        docker push docker.io/library/sharksking/sqlynx:latest
+        docker push docker.io/library/sharksking/sqlynx:${SQLYNX_VERSION}
 
     - name: Log into registry aliyun ACR
       uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
