--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,10 +46,10 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
     - name: Push into registry dockerhub
       run: | 
-        docker tag sqlynx:latest docker.io/library/sharksking/sqlynx:latest
-        docker tag sqlynx:latest docker.io/library/sharksking/sqlynx:${SQLYNX_VERSION}
-        docker push docker.io/library/sharksking/sqlynx:latest
-        docker push docker.io/library/sharksking/sqlynx:${SQLYNX_VERSION}
+        docker tag sqlynx:latest ${{ secrets.DOCKER_HUB_USERNAME }}/sqlynx:latest
+        docker tag sqlynx:latest ${{ secrets.DOCKER_HUB_USERNAME }}/sqlynx:${SQLYNX_VERSION}
+        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/sqlynx:latest
+        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/sqlynx:${SQLYNX_VERSION}
 
     - name: Log into registry aliyun ACR
       uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
