--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,13 @@ name: CI
 on:
   push:
     branches:
-    - sharks-king-patch-1
+      - sharks-king-patch-1
 
-#env:
-#  # Use docker.io for Docker Hub if empty
-#  REGISTRY: ghcr.io
-#  # github.repository as <account>/<repo>
-#  IMAGE_NAME: 
+env:
+  # 修正 Docker Hub 仓库地址格式
+  DOCKER_REGISTRY: docker.io/sharksking/sqlynx
+  # 定义阿里云仓库地址
+  ALIYUN_REGISTRY: registry.cn-hangzhou.aliyuncs.com/sql_studio/sqlynx
 
 jobs:
   docker-build:
@@ -27,39 +27,58 @@ jobs:
         ls ./
         tree 
 
-    - name: Env
+    # 从文件中加载环境变量并设置为全局可用
+    - name: Load build config
+      id: build-config
       run: |
         source ./docker-build/build-config.env
-        env
+        # 将 SQLYNX_VERSION 设置为输出变量
+        echo "SQLYNX_VERSION=$SQLYNX_VERSION" >> $GITHUB_ENV
+        # 打印验证
+        echo "Loaded SQLYNX_VERSION: $SQLYNX_VERSION"
+
     - name: docker build
       run: |
-       cd docker-build
-       bash -x build.sh 
+        cd docker-build
+        bash -x build.sh 
 
-    # Login against a Docker registry except on PR
-    # https://github.com/docker/login-action
-    - name: Log into registry dockerhub
-      uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+    # Docker Hub 推送
+    - name: Log into Docker Hub
+      uses: docker/login-action@v3
       with:
         registry: docker.io
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-    - name: Push into registry dockerhub
-      run: | 
-        docker tag sqlynx:latest ${{ secrets.DOCKER_HUB_USERNAME }}/sqlynx:latest
-        docker tag sqlynx:latest ${{ secrets.DOCKER_HUB_USERNAME }}/sqlynx:${SQLYNX_VERSION}
-        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/sqlynx:latest
-        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/sqlynx:${SQLYNX_VERSION}
 
-    - name: Log into registry aliyun ACR
-      uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+    - name: Push to Docker Hub
+      run: | 
+        # 检查版本变量是否设置
+        if [ -z "$SQLYNX_VERSION" ]; then
+          echo "::error::SQLYNX_VERSION is not set!"
+          exit 1
+        fi
+        
+        docker tag sqlynx:latest $DOCKER_REGISTRY:latest
+        docker tag sqlynx:latest $DOCKER_REGISTRY:$SQLYNX_VERSION
+        docker push $DOCKER_REGISTRY:latest
+        docker push $DOCKER_REGISTRY:$SQLYNX_VERSION
+
+    # 阿里云推送 - 使用独立凭据
+    - name: Log into Aliyun ACR
+      uses: docker/login-action@v3
       with:
         registry: registry.cn-hangzhou.aliyuncs.com
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-    - name: Push into registry aliyun ACR
+        username: ${{ secrets.ALIYUN_USERNAME }}  # 需要单独配置
+        password: ${{ secrets.ALIYUN_PASSWORD }}  # 需要单独配置
+
+    - name: Push to Aliyun ACR
       run: | 
-        docker tag sqlynx:latest registry.cn-hangzhou.aliyuncs.com/sql_studio/sqlynx:latest
-        docker tag sqlynx:latest registry.cn-hangzhou.aliyuncs.com/sql_studio/sqlynx:${SQLYNX_VERSION}
-        docker push registry.cn-hangzhou.aliyuncs.com/sql_studio/sqlynx:latest
-        docker push registry.cn-hangzhou.aliyuncs.com/sql_studio/sqlynx:${SQLYNX_VERSION}
+        if [ -z "$SQLYNX_VERSION" ]; then
+          echo "::error::SQLYNX_VERSION is not set!"
+          exit 1
+        fi
+        
+        docker tag sqlynx:latest $ALIYUN_REGISTRY:latest
+        docker tag sqlynx:latest $ALIYUN_REGISTRY:$SQLYNX_VERSION
+        docker push $ALIYUN_REGISTRY:latest
+        docker push $ALIYUN_REGISTRY:$SQLYNX_VERSION
