--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,8 +68,8 @@ jobs:
       uses: docker/login-action@v3
       with:
         registry: registry.cn-hangzhou.aliyuncs.com
-        username: ${{ secrets.ALIYUN_USERNAME }}  # 需要单独配置
-        password: ${{ secrets.ALIYUN_PASSWORD }}  # 需要单独配置
+        username: ${{ secrets.ALIYUN_ACR_USERNAME }}  # 需要单独配置
+        password: ${{ secrets.ALIYUN_ACR_PASSWORD }}  # 需要单独配置
 
     - name: Push to Aliyun ACR
       run: | 
